# Sesion16

./: README.md  pyproject.toml  requirements.txt
anthropicmcpdemo/: main.py  mainclient.py
claudemcpdemo/: demo.py
drafts/: agent.py
fatsmcpdemo/: simpleclient.py  simpleserver.py
