[project]
name = "ses16"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.13.0.2",
    "langchain>=1.0.2",
    "langchain-core>=1.0.1",
    "langchain-mcp-adapters>=0.1.11",
    "langchain-openai>=1.0.1",
    "load-dotenv>=0.1.0",
    "mcp[cli]>=1.19.0",
]
